# causal_inference_entrance

./: .gitignore  DID_SCM.ipynb  DID_SCM_minimum_wage_effect.ipynb  RDD_IV.ipynb  README.md  causal_effects_estimation.ipynb  pyproject.toml
data/input/: ec675_nsw.tab
src/: linear_regression_re75.ipynb
